--- a/week1/index.qmd
+++ b/week1/index.qmd
@@ -4,6 +4,8 @@ subtitle: "Course Information and Logistics"
 author: "Dr. Thiyanga S. Talagala <br/>  Department of Statistics, Faculty of Applied Sciences <br/> University of Sri Jayewardenepura, Sri Lanka"
 format:
   revealjs:
+    width: 2000
+    margin: 0.1
     theme: simple
     transition: slide
     background-transition: fade
@@ -42,18 +44,83 @@ Understanding the differences between school and university is crucial.
 
 ------------------------------------------------------------------------
 
-## Code
+# Naming Conventions of University Course Units: <span style="color:red;">How does it work?</span>
+
+---
+
+# STA 113 2.0 Descriptive Statistics
+
+---
+
+# STA 113 2.0  <span style="color:blue;">Descriptive Statistics</span>
+
+
+
+> ## <span style="color:blue;">Course title</span>
+
+---
+
+# <span style="color:purple;">STA 113 2.0</span>  Descriptive Statistics
+
+
+
+> ## <span style="color:purple;">Course code</span>
+
+---
+
+# STA <span style="color:red;">113 2.0</span>  
+
+
+> ## <span style="color:purple;">Course code:</span> Subject
+
+---
+
+# <span style="color:red;">STA</span>  1<span style="color:red;">13 2.0</span>  
+
+
+> ## <span style="color:purple;">Course code:</span> First Year Course Unit
+
+---
+
+
+# <span style="color:red;">STA 113 </span>  2.0 
+
+
+> ## <span style="color:purple;">Course code:</span> Weight
+
+> ### This is important in calculating your Grade Point Average (GPA).
+
+---
 
 ::: columns
-::: {.column width="90%"}
-::: {style="background-color: #2780e3"}
--   Point 1
--   Point 2
--   Point 3
+::: {.column width="50%"}
+### <span style="color:blue;">Z-Score at GCE A/L</span> 
+
+- University selection from GCE A/L
+
+
+:::
+
+
+::: {.column width="50%"}
+### <span style="color:red;">GPA at the University</span>
+- Honours degree selection
+- Award classes
+- Determine graduation eligibility
+
 :::
 :::
 
-::: {.column width="10%"}
+::: columns
+::: {.column width="50%"}
+
+-  Computed based only on GCE A/L examination results
+
+:::
+
+
+::: {.column width="50%"}
+- The results of assignments, mid-semester examination, and end-semester examination are used to compute the final grade of the course unit, which in turn affects the final GPA.
 :::
 :::
 
