--- a/week1/index.qmd
+++ b/week1/index.qmd
@@ -4,6 +4,8 @@ subtitle: "Definition of Statistics and Role of Statistics"
 author: "Dr. Thiyanga S. Talagala <br/>  Department of Statistics, Faculty of Applied Sciences <br/> University of Sri Jayewardenepura, Sri Lanka"
 format:
   revealjs:
+    css:
+        - "custom.css"
     width: 1600
     height: 900
     margin: 0.1
@@ -18,38 +20,43 @@ format:
 ---
 
 ## Learning Objective:
+
 ### By the end of this lecture, students will be able to:
 
-- Define statistics and explain its fundamental concepts.
-- Identify the various fields and contexts where statistics is used.
-- Explain the importance and significance of statistics in decision-making and problem-solving processes.
-
-
+-   Define statistics and explain its fundamental concepts.
+-   Identify the various fields and contexts where statistics is used.
+-   Explain the importance and significance of statistics in decision-making and problem-solving processes.
 
 # Outline
 
-
-
 ::: {style="margin-top: 10px; font-size: 1.5em; "}
-  What is Statistics?
+What is statistics?
 
- Where do we use statistics?
- 
- Why statistics is used?
+Where do we use statistics?
 
+Why statistics is used?
 :::
 
 # Outline
 
-
-
 ::: {style="margin-top: 10px; font-size: 1.5em; color: red;"}
- What is Statistics?
+What is statistics?
 :::
 
 ::: {style="margin-top: 10px; font-size: 1.5em;"}
- Where do we use statistics?
+Where do we use statistics?
 
- Why statistics is used?
-
+Why statistics is used?
 :::
+
+------------------------------------------------------------------------
+
+## What is Statistics? {.center .middle}
+
+::: {style="margin-top: 10px; font-size: 1.5em; "}
+The science of collecting, analyzing, presenting, and interpreting data.
+:::
+
+# The science of collecting, analyzing, presenting, and interpreting data.
+
+# The science of collecting, analyzing, presenting, and interpreting [data]{style="color:red;"}.
