--- a/week1/index.qmd
+++ b/week1/index.qmd
@@ -56,7 +56,7 @@ Why do we need statistics?
 ## What is Statistics? {.center .middle}
 
 ::: {style="margin-top: 10px; font-size: 1.5em; "}
-The science of collecting, analyzing, presenting, and interpreting data.
+The science of collecting, organizing, analyzing, presenting, and interpreting data.
 :::
 
 # The science of collecting, analyzing, presenting, and interpreting data.
@@ -172,7 +172,7 @@ knitr::include_graphics("i4.png")
 :::
 :::
 
-# The science of [collecting]{style="color:red;"}, analyzing, presenting, and interpreting [data]{style="color:blue;"}.
+# The science of [collecting]{style="color:red;"}, organizing, analyzing, presenting, and interpreting [data]{style="color:blue;"}.
 
 ------------------------------------------------------------------------
 
@@ -216,7 +216,7 @@ df
 ::: {.column width="25%"}
 ```{r, echo=FALSE}
 library(kableExtra)
-head(df, 50) |> knitr::kable() |> kable_styling(font_size = 20)
+head(df, 28) |> knitr::kable() |> kable_styling(font_size = 20)
 ```
 :::
 
@@ -324,7 +324,7 @@ knitr::include_graphics("i7.png")
 
 ------------------------------------------------------------------------
 
-# The science of [collecting]{style="color:blue;"}, [analyzing]{style="color:blue;"}, [presenting, and interpreting]{style="color:red;"} [data]{style="color:blue;"}.
+# The science of [collecting]{style="color:blue;"}, [analyzing]{style="color:blue;"}, organizing, [presenting, and interpreting]{style="color:red;"} [data]{style="color:blue;"}.
 
 ------------------------------------------------------------------------
 
@@ -413,8 +413,8 @@ tf |> knitr::kable()
 ```{r, warning=FALSE, message=FALSE}
 library(tibble)
 Terminology <- c("Actuarial statistics", "Forensic statistics", "Spatial statistics", "Econometrics", "Jurimetrics", "Psychometrics")
-Field <- c("Discipline that deals with assessing the risks in insurance and finance field.", "Studies DNA testing results", "Analysis of spatial data", "Uses economic theory, mathematics, and statistical inference to quantify economic phenomena. ", "Application of probability and statistics to law.", "Applies statistical methods to psychological measurements")
-tf <- tibble(Terminology, Field)
+Description <- c("Discipline that deals with assessing the risks in insurance and finance field.", "Studies DNA testing results", "Analysis of spatial data", "Uses economic theory, mathematics, and statistical inference to quantify economic phenomena. ", "Application of probability and statistics to law.", "Applies statistical methods to psychological measurements")
+tf <- tibble(Terminology, Description)
 tf |> knitr::kable()
 
 ```
