--- a/week2/answers.tex
+++ b/week2/answers.tex
@@ -204,4 +204,16 @@ Parameter: The failure rate of all HDDs produced by the company.
 Statistics: The observed failure rate among the selected sample of 100
 HDDs.
 
+\subsection{Question 3}\label{question-3}
+
+Population: All students attending online Zoom lecture today.
+
+Sample: A random selection of 50 students
+
+Parameter: The proportion of all university students who actively listen
+to lectures during online Zoom sessions.
+
+Statistics: The observed proportion of active listeners among the
+selected sample of 50 students.
+
 \end{document}
