--- a/week2/answers.Rmd
+++ b/week2/answers.Rmd
@@ -72,3 +72,14 @@ Sample: A random selection of 100 HDDs from a recent production batch.
 Parameter: The failure rate of all HDDs produced by the company.
 
 Statistics: The observed failure rate among the selected sample of 100 HDDs.
+
+## Question 3
+
+Population: All students attending online Zoom lecture today.
+
+
+Sample: A random selection of 50 students 
+
+Parameter: The proportion of all university students who actively listen to lectures during online Zoom sessions.
+
+Statistics: The observed proportion of active listeners among the selected sample of 50 students.
