--- a/index.qmd
+++ b/index.qmd
@@ -14,6 +14,10 @@ ttalagala\@sjp.ac.lk
 
 To access important information regarding the unit STA 113 2.0 Descriptive Statistics, please go to the course Learning Management System (LMS) page. [**Click here**](https://lms.fas.sjp.ac.lk/enrol/index.php?id=3646) to go directly to the LMS. You must carefully read the "Course Information and Logistic" slide set for essential details. It is your responsibility to be aware of important details by thoroughly reviewing the "Course Information and Logistic" slides.
 
+## Google Classroom
+
+I also opened a Google Classroom as a backup strategy in case the LMS failed. Kindly ensure that you join it. The password is available on LMS under announcements.
+
 ## Course outline
 
 Available on [**LMS**](https://lms.fas.sjp.ac.lk/enrol/index.php?id=3646)
