--- a/week1/index.qmd
+++ b/week1/index.qmd
@@ -59,9 +59,9 @@ Why do we need statistics?
 The science of collecting, organizing, analyzing, presenting, and interpreting data.
 :::
 
-# The science of collecting, analyzing, presenting, and interpreting data.
+# The science of collecting, organizing, analyzing, presenting, and interpreting data.
 
-# The science of collecting, analyzing, presenting, and interpreting [data]{style="color:red;"}.
+# The science of collecting, organizing, analyzing, presenting, and interpreting [data]{style="color:red;"}.
 
 ------------------------------------------------------------------------
 
@@ -172,7 +172,7 @@ knitr::include_graphics("i4.png")
 :::
 :::
 
-# The science of [collecting]{style="color:red;"}, organizing, analyzing, presenting, and interpreting [data]{style="color:blue;"}.
+# The science of [collecting]{style="color:red;"},  organizing, analyzing, presenting, and interpreting [data]{style="color:blue;"}.
 
 ------------------------------------------------------------------------
 
@@ -184,7 +184,10 @@ knitr::include_graphics("https://imgs.mongabay.com/wp-content/uploads/sites/20/2
 
 ------------------------------------------------------------------------
 
-# The science of [collecting]{style="color:blue;"}, [analyzing]{style="color:red;"}, presenting, and interpreting [data]{style="color:blue;"}.
+# The science of [collecting]{style="color:blue;"},  [organizing]{style="color:red;"}, analyzing, presenting, and interpreting [data]{style="color:blue;"}.
+
+
+# The science of [collecting]{style="color:blue;"}, [organizing]{style="color:blue;"}, [analyzing]{style="color:red;"}, presenting, and interpreting [data]{style="color:blue;"}.
 
 ------------------------------------------------------------------------
 
@@ -324,7 +327,7 @@ knitr::include_graphics("i7.png")
 
 ------------------------------------------------------------------------
 
-# The science of [collecting]{style="color:blue;"}, [analyzing]{style="color:blue;"}, organizing, [presenting, and interpreting]{style="color:red;"} [data]{style="color:blue;"}.
+# The science of [collecting]{style="color:blue;"}, [organizing]{style="color:blue;"}, [analyzing]{style="color:blue;"},  [presenting, and interpreting]{style="color:red;"} [data]{style="color:blue;"}.
 
 ------------------------------------------------------------------------
 
@@ -338,7 +341,7 @@ knitr::include_graphics("dsjobtraker.png")
 
 ------------------------------------------------------------------------
 
-# The [science]{style="color:red;"} of [collecting]{style="color:blue;"}, [analyzing]{style="color:blue;"}, [presenting, and interpreting]{style="color:blue;"} [data]{style="color:blue;"}.
+# The [science]{style="color:red;"} of [collecting]{style="color:blue;"}, [organizing]{style="color:blue;"}, [analyzing]{style="color:blue;"}, [presenting, and interpreting]{style="color:blue;"} [data]{style="color:blue;"}.
 
 ------------------------------------------------------------------------
 
