--- a/week2/answers.Rmd
+++ b/week2/answers.Rmd
@@ -8,15 +8,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Question 1
 
-i. Population:
+i.  Population:
 
 The population in this study refers to all the species of bacteria, bugs, and other organisms present in Beira Lake. This includes every living organism that inhabits the lake ecosystem.
-
 
 ii. Sample:
 
 The sample in this study is the bucket of water (1L) that the researcher collected from Beira Lake and examined for species diversity. The sample represents a subset of the lake's biodiversity.
-
 
 iii. Parameter:
 
@@ -24,16 +22,13 @@ The parameter in this context would be the proportion of different species count
 
 iv. Statistics:
 
-The statistics in this study would be the counts and characteristics of species observed in the collected sample (1L of water from the lake). This includes the number of different species of bacteria, bugs, and other organisms identified in the bucket of water.
-In summary:
+The statistics in this study would be the counts and characteristics of species observed in the collected sample (1L of water from the lake). This includes the number of different species of bacteria, bugs, and other organisms identified in the bucket of water. In summary:
 
 Population: All species of bacteria, bugs, and organisms in Beira Lake.
 
-Sample: The bucket of water (1L) collected from Beira Lake.
-Parameter: Proportion of species counts (e.g., bacteria, bugs) in the entire lake ecosystem.
+Sample: The bucket of water (1L) collected from Beira Lake. Parameter: Proportion of species counts (e.g., bacteria, bugs) in the entire lake ecosystem.
 
 Statistics: Counts and characteristics of species observed in the collected sample (1L) from Beira Lake.
-
 
 In summary:
 
@@ -47,7 +42,7 @@ Statistics: Counts and characteristics of species observed in the collected samp
 
 ## Question 2:
 
-i. Population:
+i.  Population:
 
 The population in this study is all the hard disk drives (HDDs) produced by the computer manufacturing company. This includes every HDD manufactured by the company within a certain timeframe.
 
@@ -77,8 +72,7 @@ Statistics: The observed failure rate among the selected sample of 100 HDDs.
 
 Population: All students attending online Zoom lecture today.
 
-
-Sample: A random selection of 50 students 
+Sample: A random selection of 50 students
 
 Parameter: The proportion of all university students who actively listen to lectures during online Zoom sessions.
 
