--- a/week2/index.qmd
+++ b/week2/index.qmd
@@ -167,10 +167,8 @@ penguins
 
 # 
 
-:::: {.columns}
-
+::: columns
 ::: {.column width="50%"}
-
 ```{r}
 knitr::include_graphics("culmen_depth.png")
 ```
@@ -179,16 +177,13 @@ Source: https://allisonhorst.github.io/palmerpenguins/
 :::
 
 ::: {.column width="50%"}
-
 ```{r}
 knitr::include_graphics("gorman-penguins.jpg")
 ```
 
 source: https://education.rstudio.com/blog/2020/07/palmerpenguins-cran/
 :::
-::::
-
-
+:::
 
 # 
 
