--- a/ga.qmd
+++ b/ga.qmd
@@ -14,64 +14,64 @@ As part of your coursework, you will be working on a group assignment. This assi
 
 -   **Secretary:** Another member should be designated as the secretary, tasked with maintaining detailed meeting minutes to track our discussions and decisions.
 
-- Further assign the following roles:
+-   Further assign the following roles:
 
-    - Deputy leader
-    
-    - Assistant secretary
-    
-    - Research Coordinator (Field 1 and History)
-    
-    - Research Coordinator (Field 2 and Field 3)
-    
-     - Research Coordinator (Field 4 and Field 5)
-     
-     - Research Coordinator (Field 6 and Field 7)
+    -   Deputy leader
+
+    -   Assistant secretary
+
+    -   Research Coordinator (Field 1 and History)
+
+    -   Research Coordinator (Field 2 and Field 3)
+
+    -   Research Coordinator (Field 4 and Field 5)
+
+    -   Research Coordinator (Field 6 and Field 7)
 
 **2. Assignment Task**
 
-- One member from each group will research and present the historical evolution of statistics.
+-   One member from each group will research and present the historical evolution of statistics.
 
-- The remaining members will each choose one field of application from the provided list and research the use of statistics in that field. The fields to choose from are:
+-   The remaining members will each choose one field of application from the provided list and research the use of statistics in that field. The fields to choose from are:
 
-    - Health Sciences
-    - Business and Economics
-    - Environmental Sciences
-    - Social Sciences
-    - Engineering
-    - Education
-    - Government and Public Policy
-    
-- For each section content should be limited to 2 A4 page only, with font size 12 and Times New Roman.
-    
+    -   Health Sciences
+    -   Business and Economics
+    -   Environmental Sciences
+    -   Social Sciences
+    -   Engineering
+    -   Education
+    -   Government and Public Policy
+
+-   For each section content should be limited to 2 A4 page only, with font size 12 and Times New Roman.
+
 **3. Submission Format:**
 
 Submit the completed report as a single document following the specified format guidelines.
 
-- Cover page
+-   Cover page (Include group number)
 
-- Group members/ Index numbers/ Role/ Page contributed
+-   Group members/ Index numbers/ Role/ Page contributed
 
-- Content: 
+-   Content:
 
     Title
-    
-    Content
-    
-    References
-    
-    Authors name
-    
-    Page number
-    
-- Annexture 
 
-  - Project timeline
-  
-  - Meeting minutes
-  
-  - Duties performed by the members (Assist the secretary in maintaining records and documentation, Ensure proper formatting and organization of the document, etc.)
-    
+    Content
+
+    References
+
+    Authors name
+
+    Page number
+
+-   Annexture
+
+    -   Project timeline
+
+    -   Meeting minutes
+
+    -   Duties performed by the members (Assist the secretary in maintaining records and documentation, Ensure proper formatting and organization of the document, etc.)
+
 **4. Submission deadline**
 
 June 19, 2024
@@ -80,10 +80,12 @@ June 19, 2024
 
 This assignment provides an opportunity to deepen your understanding of statistical concepts and their practical applications while fostering teamwork and collaboration.
 
-If you have any questions or require further clarification, please feel free to reach out to me (email: ttalagala@sjp.ac.lk).
+Every member should be familiar with the entire content of the report to ensure a comprehensive understanding
+
+If you have any questions or require further clarification, please feel free to reach out to me (email: ttalagala\@sjp.ac.lk).
 
 ## Help desk
 
 First help desk session will be held on June 5, 2024 from 3.15pm to 4.00pm.
 
-If you need any additional support, please send an email to statdemos@sci.sjp.ac.lk and reserve a time for a meeting (weekdays only between 8 a.m. and 4 p.m.).
+If you need any additional support, please send an email to statdemos\@sci.sjp.ac.lk and reserve a time for a meeting (weekdays only between 8 a.m. and 4 p.m.).
